--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "typed-button",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dimireme.github.io/typed-button/",
   "dependencies": {
     "@types/node": "^16.11.32",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
