--- a/package.json
+++ b/package.json
@@ -3,21 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://dimireme.github.io/typed-button/",
-  "dependencies": {
-    "@types/node": "^16.11.32",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "gh-pages": "^3.2.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.4"
-  },
+  "license": "mit",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -35,6 +27,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@types/node": "^16.11.32",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "gh-pages": "^3.2.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "sass": "^1.51.0"
